--- a/app/admin/template/administrative/customer.twig
+++ b/app/admin/template/administrative/customer.twig
@@ -23,7 +23,7 @@
 
 					<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
 						<label for="company" class="col-xs-3 control-label">{% trans "Company" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[company]" id="company" class="form-control" value="{{ env.post.customer.company }}">
 							{{ form.invalid_input('company', errors) }}
 						</div>
@@ -31,7 +31,7 @@
 
 					<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
 						<label for="firstname" class="col-xs-3 control-label">{% trans "Firstname" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[firstname]" id="firstname" class="form-control" value="{{ env.post.customer.firstname }}">
 							{{ form.invalid_input('firstname', errors) }}
 						</div>
@@ -39,7 +39,7 @@
 
 					<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
 						<label for="lastname" class="col-xs-3 control-label">{% trans "Lastname" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[lastname]" id="lastname" class="form-control" value="{{ env.post.customer.lastname }}">
 							{{ form.invalid_input('lastname', errors) }}
 						</div>
@@ -47,7 +47,7 @@
 
 					<div class="form-group{% if 'street' in errors|keys %} has-error{% endif %}">
 						<label for="street" class="col-xs-3 control-label">{% trans "Street" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[street]" id="street" class="form-control" value="{{ env.post.customer.street }}">
 							{{ form.invalid_input('street', errors) }}
 						</div>
@@ -63,7 +63,7 @@
 
 					<div class="form-group{% if 'city' in errors|keys %} has-error{% endif %}">
 						<label for="city" class="col-xs-3 control-label">{% trans "City" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[city]" id="city" class="form-control" value="{{ env.post.customer.city }}">
 							{{ form.invalid_input('city', errors) }}
 						</div>
@@ -79,15 +79,28 @@
 
 					<div class="form-group{% if 'country_id' in errors|keys %} has-error{% endif %}">
 						<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
-						<div class="col-xs-9">
-							{{ form.select_country(countries, 'customer[country_id]', 'country_id', env.post.customer.country_id|default(203)) }}
+						<div class="col-xs-5">
+							<select name="supplier[country_id]" class="form-control" onchange="change_country();">
+							{% for group in countries|keys  %}
+								{% if group == 'european' %}
+									<optgroup label="{% trans "European" %}">
+								{% else %}
+									<optgroup label="{% trans "Rest of the world" %}">
+								{% endif %}
+
+								{% for country in countries[group] %}
+									<option value="{{ country.id }}" data-iso2="{{ country.iso2 }}" {% if env.post.customer.country_id == country.id %}selected="selected"{% endif %}>{{ country.name }}</option>
+								{% endfor %}
+								</optgroup>
+							{% endfor %}
+							</select>
 							{{ form.invalid_input('country_id', errors) }}
 						</div>
 					</div>
 
 					<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
 						<label for="email" class="col-xs-3 control-label">{% trans "Email" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[email]" id="email" class="form-control" value="{{ env.post.customer.email }}">
 							{{ form.invalid_input('email', errors) }}
 						</div>
@@ -95,7 +108,7 @@
 
 					<div class="form-group{% if 'phone' in errors|keys %} has-error{% endif %}">
 						<label for="phone" class="col-xs-3 control-label">{% trans "Phone" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[phone]" id="phone" class="form-control" value="{{ env.post.customer.phone }}">
 							{{ form.invalid_input('phone', errors) }}
 						</div>
@@ -103,7 +116,7 @@
 
 					<div class="form-group{% if 'mobile' in errors|keys %} has-error{% endif %}">
 						<label for="mobile" class="col-xs-3 control-label">{% trans "Mobile" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[mobile]" id="mobile" class="form-control" value="{{ env.post.customer.mobile }}">
 							{{ form.invalid_input('mobile', errors) }}
 						</div>
@@ -111,7 +124,7 @@
 
 					<div class="form-group{% if 'fax' in errors|keys %} has-error{% endif %}">
 						<label for="fax" class="col-xs-3 control-label">{% trans "Fax" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="customer[fax]" id="fax" class="form-control" value="{{ env.post.customer.fax }}">
 							{{ form.invalid_input('fax', errors) }}
 						</div>
@@ -119,8 +132,9 @@
 
 					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
 						<label for="vat" class="col-xs-3 control-label">{% trans "Vat" %}</label>
+						<div class="col-xs-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
 						<div class="col-xs-4">
-							<input type="text" name="customer[vat]" id="vat" class="form-control" value="{{ env.post.customer.vat }}">
+							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ supplier.vat }}">
 							{{ form.invalid_input('vat', errors) }}
 						</div>
 					</div>
@@ -134,13 +148,13 @@
 
 					<div class="form-group">
 					    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
-					    <div class="col-xs-9">
+					    <div class="col-xs-5">
 					        <textarea name="customer[comment]" class="form-control">{{ env.post.customer.comment }}</textarea>
 					    </div>
 					</div>
 
 					<div class="form-group">
-						<div class="col-xs-9 col-xs-offset-3">
+						<div class="col-xs-5 col-xs-offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
 							</button>
@@ -150,6 +164,13 @@
 				</div>
 			</div>
 		</form>
+		<script type="text/javascript">
+			function change_country() {
+				iso2 = $('select[name="supplier[country_id]"] option:selected').attr('data-iso2');
+				$('#vat_prefix').val(iso2);
+			}
+			change_country();
+		</script>
 
 	{% elseif env.module.get_name() != 'administrative_customer' %}
 
@@ -184,7 +205,7 @@
 				<form method="post" action="/administrative/customer" class="form-horizontal">
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Search" %}</label>
-						<div class="col-xs-9">
+						<div class="col-xs-5">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
