new features: - recurring invoice queue - update in top menu - some style fixes - product definition

--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -15,15 +15,26 @@
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="/user">{% trans "Users" %}</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Administration" %} <b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li {% if env.module.get_name() == 'user' %}class="active"{% endif %}><a href="/user">{% trans "Users" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_customer' %}class="active"{% endif %}><a href="/administrative/customer">{% trans "Customers" %}</a></li>
-						<li {% if env.module.get_name() == 'administrative_invoice' %}class="active"{% endif %}><a href="/administrative/invoice">{% trans "Invoices" %}</a></li>
-						<li {% if env.module.get_name() == 'administrative_invoice_queue' %}class="active"{% endif %}><a href="/administrative/invoice/queue">{% trans "Invoice queue" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_supplier' %}class="active"{% endif %}><a href="/administrative/supplier">{% trans "Suppliers" %}</a></li>
 						<li {% if env.module.get_name() == 'export' %}class="active"{% endif %}><a href="/export">{% trans "Exports" %}</a></li>
+					</ul>
+				</li>
+			</ul>
+
+			<ul class="nav navbar-nav">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Sales" %} <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li {% if env.module.get_name() == 'sales_invoice' %}class="active"{% endif %}><a href="/sales/invoice">{% trans "Invoices" %}</a></li>
+						<li {% if env.module.get_name() == 'sales_invoice_queue' %}class="active"{% endif %}><a href="/sales/invoice/queue">{% trans "Invoice queue" %}</a></li>
+						<li {% if env.module.get_name() == 'sales_invoice_queue_recurring' %}class="active"{% endif %}><a href="/sales/invoice/queue/recurring">{% trans "Recurring Invoice queue" %}</a></li>
+						<li {% if env.module.get_name() == 'sales_product_type' %}class="active"{% endif %}><a href="/sales/product/type">{% trans "Product Definitions" %}</a></li>
+
 					</ul>
 				</li>
 			</ul>
